@@ -70,6 +70,7 @@ dependencyCheck {
 }
 
 val testJavaVersion = gradle.startParameter.projectProperties.get("testJavaVersion")?.let(JavaVersion::toVersion)
+val denyUnsafe = gradle.startParameter.projectProperties.get("denyUnsafe")?.toBoolean() ?: false
 
 tasks {
   withType<JavaCompile>().configureEach {
@@ -112,6 +113,11 @@ tasks {
           languageVersion.set(JavaLanguageVersion.of(testJavaVersion.majorVersion))
         },
       )
+    }
+
+    // Add JVM arguments when denyUnsafe property is set
+    if (denyUnsafe) {
+      jvmArgs("--sun-misc-unsafe-memory-access=deny")
     }
 
     val defaultMaxRetries = if (System.getenv().containsKey("CI")) 2 else 0
