@@ -33,6 +33,14 @@ testing {
 }
 
 tasks {
+  withType<Test>().configureEach {
+    val denyUnsafe = gradle.startParameter.projectProperties.get("denyUnsafe")?.toBoolean() ?: false
+    if (denyUnsafe) {
+      // These tests use Armeria which uses Unsafe via JCTools
+      jvmArgs("--sun-misc-unsafe-memory-access=allow")
+    }
+  }
+
   // Don't need javadoc.
   javadoc {
     isEnabled = false
